Ignore command/templates for linting and fix errors

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   "xo": {
     "esnext": true,
     "ignores": [
-      "app/templates/**"
+      "app/templates/**",
+      "command/templates/**"
     ]
   },
   "repository": "https://github.com/brh55/generator-spark-bot.git",
